src/objects/Building__c.object
<CustomObject>
    <description>A Building on a Property</description>
    <fields>
        <fullName>ADA_Units_Accessibility__c</fullName>
        <label>ADA Units - Accessibility</label>
        <summaryFilterItems>
            <field>Property_Unit__c.Accesibility__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADA_Units_Hearing__c</fullName>
        <label>ADA Units - Hearing</label>
        <summaryFilterItems>
            <field>Property_Unit__c.Hearing__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADA_Units_Vision__c</fullName>
        <label>ADA Units - Vision</label>
        <summaryFilterItems>
            <field>Property_Unit__c.Vision__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APN__c</fullName>
        <label>APN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acceptable_Adaptable_Units__c</fullName>
        <label>Acceptable/Adaptable Units</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acquisition_Costs__c</fullName>
        <label>Acquisition Costs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appraisal_Date__c</fullName>
        <label>Appraisal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraised_Placement_Property_Value__c</fullName>
        <label>Appraised Placement Property Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Group__c</fullName>
        <label>Asset Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Loan Proceeds</fullName>
                </value>
                <value>
                    <fullName>FHA Central</fullName>
                </value>
                <value>
                    <fullName>FHA North</fullName>
                </value>
                <value>
                    <fullName>State Sites</fullName>
                </value>
                <value>
                    <fullName>BAB</fullName>
                </value>
                <value>
                    <fullName>Unleveraged 2-4s</fullName>
                </value>
                <value>
                    <fullName>Single Family Home</fullName>
                </value>
                <value>
                    <fullName>FHA South</fullName>
                </value>
                <value>
                    <fullName>FNMA Belden</fullName>
                </value>
                <value>
                    <fullName>FNMA North</fullName>
                </value>
                <value>
                    <fullName>FNMA Central</fullName>
                </value>
                <value>
                    <fullName>Public Housing</fullName>
                </value>
                <value>
                    <fullName>Non Leveraged</fullName>
                </value>
                <value>
                    <fullName>Leveraged</fullName>
                </value>
                <value>
                    <fullName>City Properties</fullName>
                </value>
                <value>
                    <fullName>Mercado LLC</fullName>
                </value>
                <value>
                    <fullName>Commercial Property</fullName>
                </value>
                <value>
                    <fullName>Vacant Land</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Properties4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_Unit_Count__c</fullName>
        <description>Shows the number of units that have the &quot;Unit Currently Vacant&quot; marked as &quot;Yes&quot;</description>
        <inlineHelpText>Shows the number of units that have the &quot;Unit Currently Vacant&quot; marked as &quot;Yes&quot; at the Unit Level.</inlineHelpText>
        <label>Available Unit Count</label>
        <summarizedField>Property_Unit__c.Active_Placements__c</summarizedField>
        <summaryFilterItems>
            <field>Property_Unit__c.Active_Placements__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Average_SDGE_Bill_Prior_to_Solar__c</fullName>
        <label>Average SDGE Bill Prior to Solar</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Basement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bathroom_GFIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bathroom GFIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bathroom_Vent_Fan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bathroom Vent Fan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boiler_Expiration__c</fullName>
        <label>Boiler Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Permit_PTS_Numbers__c</fullName>
        <label>Building Permit PTS Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Building_Style__c</fullName>
        <label>Building Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Craftsman</fullName>
                </value>
                <value>
                    <fullName>Modern</fullName>
                </value>
                <value>
                    <fullName>Mission</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Historic</fullName>
                </value>
                <value>
                    <fullName>Faux Tuscan</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Garden Walk Up</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Modern Spanish</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Ranch</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Spanish Mission</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Type__c</fullName>
        <label>Building Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Rise 1-3 Stories</fullName>
                </value>
                <value>
                    <fullName>Mid Rise 3+ Stories &lt; 75&apos;</fullName>
                </value>
                <value>
                    <fullName>High Rise 75&apos; +</fullName>
                </value>
                <value>
                    <fullName>Mid Rise 3 + Stories &lt;75&apos;</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Central_Boiler_Room__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Central Boiler Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Diego</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>National City</fullName>
                </value>
                <value>
                    <fullName>Chula Vista</fullName>
                </value>
                <value>
                    <fullName>Escondido</fullName>
                </value>
                <value>
                    <fullName>La Mesa</fullName>
                </value>
                <value>
                    <fullName>Imperial Beach</fullName>
                </value>
                <value>
                    <fullName>El Cajon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Planning_Area__c</fullName>
        <label>Community Planning Area</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Room_Sq_Ft__c</fullName>
        <label>Community Room Sq Ft</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_Room__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction_Type__c</fullName>
        <label>Construction Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wood Frame/Stucco</fullName>
                </value>
                <value>
                    <fullName>Metal Frame Stucco</fullName>
                </value>
                <value>
                    <fullName>Brick/Block</fullName>
                </value>
                <value>
                    <fullName>Tilt Up</fullName>
                </value>
                <value>
                    <fullName>Type I-A Fire Resistive Non-Combustible</fullName>
                </value>
                <value>
                    <fullName>Type I-B Fire Resistive Non-Combustible</fullName>
                </value>
                <value>
                    <fullName>Type II-A Protected Non-Combustible</fullName>
                </value>
                <value>
                    <fullName>Type II-B Unprotected Non-Combustible</fullName>
                </value>
                <value>
                    <fullName>Type III-A Protected Combustible</fullName>
                </value>
                <value>
                    <fullName>Type III-B Unprotected Combustible</fullName>
                </value>
                <value>
                    <fullName>Type IV Heavy Timber</fullName>
                </value>
                <value>
                    <fullName>Type V-A Protected Wood Frame</fullName>
                </value>
                <value>
                    <fullName>Type V-B Unprotected Wood Frame</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Council_District__c</fullName>
        <inlineHelpText>To Lookup the Council District, find the link below in the Quick Actions Links Section to be taken to the Council district Lookup Page.</inlineHelpText>
        <label>Council District</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>Not in City of SD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Estimated_Property_Value__c</fullName>
        <label>Date of Estimated Property Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dish_Washer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dish Washer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>District_Number__c</fullName>
        <label>District Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electric_Sub_Metering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electric Sub Metering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Room__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elevator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elevator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Property_Value__c</fullName>
        <label>Estimated Property Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GPR_Increase_Scheduled_Month__c</fullName>
        <label>GPR Increase Scheduled Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gas_and_Electric_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gas and Electric Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Properties6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>12</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Gross_Square_Footage__c</fullName>
        <label>Gross Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HDP_Developed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HDP Developed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HUD_Max_Rent__c</fullName>
        <label>HUD Max Rent</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HUD_Project_Number_AMP__c</fullName>
        <label>HUD Project Number (AMP)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HVAC_Type__c</fullName>
        <label>HVAC Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electric - Forced Air</fullName>
                </value>
                <value>
                    <fullName>Gas - Forced Air</fullName>
                </value>
                <value>
                    <fullName>Electric - Heat Pump</fullName>
                </value>
                <value>
                    <fullName>Gas - Wall Heater</fullName>
                </value>
                <value>
                    <fullName>Electric - Wall Heater</fullName>
                </value>
                <value>
                    <fullName>Electric Baseboard</fullName>
                </value>
                <value>
                    <fullName>Solar Water Heater</fullName>
                </value>
                <value>
                    <fullName>Photo Voltaic (Solar Electric)</fullName>
                </value>
                <value>
                    <fullName>Electric Ceiling Radiant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Units__c</fullName>
        <label>Home Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Housing_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Housing Supervisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inclusionary_Density_Bonus__c</fullName>
        <label>Inclusionary/Density Bonus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inclusionary</fullName>
                </value>
                <value>
                    <fullName>Density Bonus</fullName>
                </value>
                <value>
                    <fullName>Inclusionary &amp; Density Bonus</fullName>
                </value>
                <value>
                    <fullName>NCFUA</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Properties8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_Coverage_Amount__c</fullName>
        <label>Insurance Coverage Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Deductible__c</fullName>
        <label>Insurance Deductible</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Limits__c</fullName>
        <label>Insurance Limits</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insured_Property_Value__c</fullName>
        <label>Insured Property Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kitchen_GFIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kitchen GFIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEED_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LEED Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LIHTC_Actual__c</fullName>
        <label>LIHTC Actual</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LIHTC_Proforma__c</fullName>
        <label>LIHTC Proforma</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LIHTC_Yield_Actual__c</fullName>
        <label>LIHTC Yield Actual</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LIHTC_Yield_Proforma__c</fullName>
        <label>LIHTC Yield Proforma</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Physical_Needs_Assessment__c</fullName>
        <label>Last Physical Needs Assessment</label>
        <summarizedField>Property_Unit__c.Last_Physical_Needs_Assessment__c</summarizedField>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latest_Inspection_Score__c</fullName>
        <formula>10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Inspection Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Laundry_Room_Sq_Ft__c</fullName>
        <label>Laundry Room Sq Ft</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Laundry_Room__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Laundry Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyRHNumber__c</fullName>
        <description>This is the Legacy RH Number from Rehab to line up properties to units later.</description>
        <label>LegacyRHNumber</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Building_ID__c</fullName>
        <description>Building ID From Bond Projects from Yardi</description>
        <externalId>true</externalId>
        <label>Legacy Building ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Term_Valuation__c</fullName>
        <label>Long Term Valuation</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lot_Size__c</fullName>
        <label>Lot Size</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maintenance Supervisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Properties3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maintenance_Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maintenance Tech</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Properties2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Rent__c</fullName>
        <label>Market Rent</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meter_Location_on_Property__c</fullName>
        <label>Meter Location on Property</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter__c</fullName>
        <label>Meter #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mixed_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mixed Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Square_Footage__c</fullName>
        <label>Net Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_ADA_Parking_Spaces__c</fullName>
        <label>Number of ADA Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Carport_Spaces__c</fullName>
        <label>Number of Carport Spaces</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Garages__c</fullName>
        <label>Number of Garages</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Spaces__c</fullName>
        <label>Number of Open Spaces</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Parking_Spaces__c</fullName>
        <label>Number of Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tandem_Spaces__c</fullName>
        <label>Number of Tandem Spaces</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Water_Heaters__c</fullName>
        <label>Number of Water Heaters</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Site_Ammenities__c</fullName>
        <label>On-Site Ammenities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pool</fullName>
                </value>
                <value>
                    <fullName>Gym</fullName>
                </value>
                <value>
                    <fullName>Computer Room</fullName>
                </value>
                <value>
                    <fullName>Rec Room</fullName>
                </value>
                <value>
                    <fullName>Tot Lot</fullName>
                </value>
                <value>
                    <fullName>Community Room</fullName>
                </value>
                <value>
                    <fullName>Playground</fullName>
                </value>
                <value>
                    <fullName>Recreation Room</fullName>
                </value>
                <value>
                    <fullName>Terrace</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Game Room</fullName>
                </value>
                <value>
                    <fullName>Play Area</fullName>
                </value>
                <value>
                    <fullName>Courtyard</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Play Room</fullName>
                </value>
                <value>
                    <fullName>Dining Room</fullName>
                </value>
                <value>
                    <fullName>BBQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_AMI__c</fullName>
        <label>Other AMI%</label>
        <summaryFilterItems>
            <field>Property_Unit__c.AMI__c</field>
            <operation>equals</operation>
            <value>30%, 40%, 45%, 55%, 60%</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PHS_Homeless_Units__c</fullName>
        <label>PHS/Homeless Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parking_Type__c</fullName>
        <label>Parking Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Surface Uncovered</fullName>
                </value>
                <value>
                    <fullName>Surface Covered</fullName>
                </value>
                <value>
                    <fullName>Surface Podium</fullName>
                </value>
                <value>
                    <fullName>Underground</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Placed_In_Service__c</fullName>
        <label>Placed In Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Population_Type__c</fullName>
        <label>Population Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>TAY</fullName>
                </value>
                <value>
                    <fullName>Homeless</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Individuals</fullName>
                </value>
                <value>
                    <fullName>Special needs</fullName>
                </value>
                <value>
                    <fullName>Homeless Youth</fullName>
                </value>
                <value>
                    <fullName>Safe Home</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>HIV/AIDS</fullName>
                </value>
                <value>
                    <fullName>Transitional Hsg.</fullName>
                </value>
                <value>
                    <fullName>Veterans</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Restrictions__c</fullName>
        <label>Program Restrictions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HOME</fullName>
                </value>
                <value>
                    <fullName>CDBG</fullName>
                </value>
                <value>
                    <fullName>LITCH</fullName>
                </value>
                <value>
                    <fullName>HUD</fullName>
                </value>
                <value>
                    <fullName>LENDER</fullName>
                </value>
                <value>
                    <fullName>CUP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Management_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Management Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Properties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Management_Office_Sq_Ft__c</fullName>
        <label>Property Management Office Sq Ft</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Management_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property Management Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Properties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>